; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgb/common/extr_cxgb_t3_hw.c_t3_i2c_read8.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgb/common/extr_cxgb_t3_hw.c_t3_i2c_read8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@A_I2C_OP = common dso_local global i32 0, align 4
@F_I2C_READ = common dso_local global i32 0, align 4
@F_I2C_CONT = common dso_local global i32 0, align 4
@F_I2C_BUSY = common dso_local global i32 0, align 4
@I2C_ATTEMPTS = common dso_local global i32 0, align 4
@F_I2C_ACK = common dso_local global i32 0, align 4
@A_I2C_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @t3_i2c_read8(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @MDIO_LOCK(i32* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* @A_I2C_OP, align 4
  %13 = load i32, i32* @F_I2C_READ, align 4
  %14 = load i32, i32* %5, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* @F_I2C_CONT, align 4
  br label %19

18:                                               ; preds = %3
  br label %19

19:                                               ; preds = %18, %16
  %20 = phi i32 [ %17, %16 ], [ 0, %18 ]
  %21 = or i32 %13, %20
  %22 = call i32 @t3_write_reg(i32* %11, i32 %12, i32 %21)
  %23 = load i32*, i32** %4, align 8
  %24 = load i32, i32* @A_I2C_OP, align 4
  %25 = load i32, i32* @F_I2C_BUSY, align 4
  %26 = load i32, i32* @I2C_ATTEMPTS, align 4
  %27 = call i32 @t3_wait_op_done_val(i32* %23, i32 %24, i32 %25, i32 0, i32 %26, i32 10, i32* %8)
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = icmp sge i32 %28, 0
  br i1 %29, label %30, label %42

30:                                               ; preds = %19
  %31 = load i32, i32* %8, align 4
  %32 = load i32, i32* @F_I2C_ACK, align 4
  %33 = and i32 %31, %32
  %34 = load i32, i32* @F_I2C_ACK, align 4
  %35 = icmp eq i32 %33, %34
  %36 = zext i1 %35 to i32
  store i32 %36, i32* %7, align 4
  %37 = load i32*, i32** %4, align 8
  %38 = load i32, i32* @A_I2C_DATA, align 4
  %39 = call i32 @t3_read_reg(i32* %37, i32 %38)
  %40 = call i32 @G_I2C_DATA(i32 %39)
  %41 = load i32*, i32** %6, align 8
  store i32 %40, i32* %41, align 4
  br label %42

42:                                               ; preds = %30, %19
  %43 = load i32*, i32** %4, align 8
  %44 = call i32 @MDIO_UNLOCK(i32* %43)
  %45 = load i32, i32* %7, align 4
  ret i32 %45
}

declare dso_local i32 @MDIO_LOCK(i32*) #1

declare dso_local i32 @t3_write_reg(i32*, i32, i32) #1

declare dso_local i32 @t3_wait_op_done_val(i32*, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @G_I2C_DATA(i32) #1

declare dso_local i32 @t3_read_reg(i32*, i32) #1

declare dso_local i32 @MDIO_UNLOCK(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
